<resources>
    <!-- 공통 -->
    <string name="app_name">SFSArteryApp</string>
    <string name="confirm_text">확인</string>
    <string name="cancel_text">취소</string>
    <string name="camera_permission_denied">카메라 권한 미허용으로 정맥 인증이 불가능합니다.</string>

    <!-- 로그인 -->
    <string name="main_app_name">SFS</string>
    <string name="login_id_hint">아이디</string>
    <string name="login_pw_hint">비밀번호</string>
    <string name="login_save_id">아이디 저장</string>
    <string name="login_btn">로그인</string>
    <string name="login_sign_in">회원가입</string>
    <string name="login_company_code_hint">회사코드 입력</string>
    <string name="login_welcome">환영합니다</string>
    <string name="login_artery">손 정맥 로그인</string>
    <string name="right_hand_login">오른손 로그인</string>

    <!-- 회원가입 -->
    <string name="sign_in_id">아이디</string>
    <string name="sign_in_id_empty">아이디를 입력해주세요</string>
    <string name="sign_in_id_comfirm">아이디를 확인해주세요</string>
    <string name="sign_in_overlap_chk">중복확인</string>
    <string name="sign_in_overlap_chk_empty">아이디 중복확인이 필요합니다</string>
    <string name="sign_in_overlap_comfirm">중복 확인되었습니다</string>
    <string name="sign_in_pw">비밀번호</string>
    <string name="sign_in_pw_empty">비밀번호를 입력해주세요</string>
    <string name="sign_in_pw_confirm">비밀번호 확인</string>
    <string name="sign_in_pw_confirm_empty">비밀번호를 확인해주세요</string>
    <string name="sign_in_name">이름</string>
    <string name="sign_in_name_empty">이름을 입력해주세요</string>
    <string name="sign_in_number">전화번호</string>
    <string name="sign_in_number_empty">전화번호를 입력해주세요</string>
    <string name="sign_in_number_not_correct">전화번호를 정확히 입력해주세요</string>
    <string name="sign_in_pw_confirm_error">비밀번호가 일치하지 않습니다.</string>
    <string name="sign_in_company_code">회사코드</string>
    <string name="sign_in_company_code_empty">회사코드를 입력해주세요</string>
    <string name="sign_in_company_code_confirm">회사코드 확인</string>
    <string name="sign_in_company_code_confirm_empty">회사코드를 확인해주세요</string>
    <string name="sign_in_company_code_confirm_fail">회사코드가 존재하지 않습니다.</string>
    <string name="sign_in_artery_enroll">정맥등록 (회원가입 후 마이페이지에서 수정 가능합니다.)</string>
    <string name="sign_in_artery_enroll_btn">정맥등록하기</string>
    <string name="sign_in_artery_enroll_nothing">정맥 인증이 등록되지 않았습니다.</string>
    <string name="sign_in_artery_right_enroll_nothing">오른손 정맥 인증이 등록되지 않았습니다.</string>
    <string name="sign_in_artery_left_enroll_nothing">왼손 정맥 인증이 등록되지 않았습니다.</string>
    <string name="sign_in_artery_enroll_left_hand">왼손</string>
    <string name="sign_in_artery_enroll_right_hand">오른손</string>
    <string name="sign_in_artery_enroll_success">%s 정맥이 등록되었습니다</string>
    <string name="sign_in_btn">가입하기</string>
    <string name="sign_in_fail">회원가입에 실패하였습니다.</string>
    <string name="sign_in_overlap_id">중복된 아이디입니다.</string>
    <string name="sign_in_usable_id">사용가능한 아이디입니다.</string>

    <!-- 정맥 인증 -->
    <string name="artery_main_info_text">손바닥을 흰색 프레임 안에 맞춘 후
        \n 화면을 터치해 촬영해주세요</string>
    <string name="artery_main_user_check_text">흰색 프레임에 배경이 나타나지 않는지 확인하십시오.</string>
    <string name="artery_main_one_more">한번 더 촬영해주세요</string>
    <string name="artery_main_ok">확인</string>
    <string name="artery_main_again">재촬영</string>
    <string name="artery_enroll_fail">등록 실패하였습니다. \n 처음부터 다시 촬영해주세요</string>
    <string name="artery_verificate_fail">인증 실패하였습니다. \n 처음부터 다시 촬영해주세요</string>
    <string name="artery_left_hand">왼손</string>
    <string name="artery_right_hand">오른손</string>
    <string name="artery_bad_img_quality">촬영 품질이 좋지 않습니다. \n 다른 장소에서 등록해주세요</string>
    <string name="artery_invalid_hand">정상적이지 않은 손바닥이 감지되었습니다.</string>
    <string name="artery_proper_position">손이 올바른 위치에 있지 않습니다.</string>
    <string name="artery_hand_position_center">화면 중앙에 손을 올려주세요.</string>
    <string name="artery_error">오류가 발생하였습니다.</string>
    <string name="artery_fail">실패 하였습니다.</string>
    <string name="artery_success">성공 하였습니다.</string>
    <string name="artery_select_hand">정맥 인증할 손을 선택해주세요.</string>

    <!-- 개인 회원정보 -->
    <string name="normal_user_info_text">회원정보</string>
    <string name="normal_user_info_company">회사</string>
    <string name="normal_user_info_name">이름</string>
    <string name="normal_user_info_phonenum">전화번호</string>
    <string name="normal_user_info_artery_modify">정맥등록 수정</string>
    <string name="normal_user_info_artery_pawssord_change">비밀번호 변경</string>
    <string name="normal_user_info_artery_id_title">%s님</string>
    <string name="normal_user_info_artery_id_sub">안녕하세요.</string>

    <!-- 인증 -->
    <string name="artery_success_text_authenticate">정맥 인증되었습니다.</string>

    <!-- 비밀번호 변경-->
    <string name="change_pw_origin">기존 비밀번호 입력</string>
    <string name="change_pw_origin_empty">기존 비밀번호를 입력해주세요.</string>
    <string name="change_pw_origin_confirm">기존 비밀번호를 확인해주세요.</string>
    <string name="change_pw_new">새로운 비밀번호 입력</string>
    <string name="change_pw_new_empty">새로운 비밀번호를 입력해주세요.</string>
    <string name="change_pw_new_confirm">새로운 비밀번호 확인</string>
    <string name="change_pw_new_confirm_empty">새로운 비밀번호를 확인해주세요.</string>
    <string name="change_pw_success">비밀번호가 변경되었습니다.</string>
    <string name="change_pw_fail">비밀번호 변경에 실패하였습니다.</string>
</resources>