<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewmodel"
            type="com.sfs.artery.certification.app.viewmodel.NormalUserInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.NormalUserInfoActivity">

        <com.sfs.artery.certification.app.view.HeaderView
            android:id="@+id/header_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_size_30"
            android:layout_marginTop="@dimen/dp_size_30"
            android:layout_marginRight="@dimen/dp_size_30"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_view">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/info_user_id_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_bg_color"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_3"
                android:text="@string/normal_user_info_artery_id_sub"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_100"
                android:text="@string/normal_user_info_company"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_info_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_10"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_13" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_20"
                android:text="@string/normal_user_info_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_10"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_13" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_20"
                android:text="@string/normal_user_info_phonenum"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_info_phonenum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_10"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_13" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_50"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="@dimen/dp_size_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_box_layout"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_size_20"
                        android:layout_marginTop="@dimen/dp_size_15"
                        android:layout_marginRight="@dimen/dp_size_20"
                        android:layout_marginBottom="@dimen/dp_size_15"
                        android:text="@string/normal_user_info_artery_modify"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_13" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="@dimen/dp_size_0"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_size_10"
                    android:layout_weight="1"
                    android:background="@drawable/btn_box_layout"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_size_20"
                        android:layout_marginTop="@dimen/dp_size_15"
                        android:layout_marginRight="@dimen/dp_size_20"
                        android:layout_marginBottom="@dimen/dp_size_15"
                        android:text="@string/normal_user_info_artery_pawssord_change"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_13" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
