<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.sfs.artery.certification.app.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/login_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_size_20"
                android:src="@drawable/sfs_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_size_10"
                android:src="@drawable/app_bg_image" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_size_10"
                android:text="@string/login_welcome"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_size_50"
                android:layout_marginTop="@dimen/dp_size_30"
                android:layout_marginRight="@dimen/dp_size_50"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/login_id_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_box_layout"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_size_15"
                    android:paddingTop="@dimen/dp_size_15"
                    android:paddingBottom="@dimen/dp_size_15"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/login_id_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/leferi_font_family"
                        android:hint="@string/login_id_hint"
                        android:inputType="text"
                        android:privateImeOptions="defaultInputmode=english"
                        android:text="@={viewmodel.userId}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/basic_hint_text_color2"
                        android:textSize="@dimen/text_size_13" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/login_pw_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_size_10"
                    android:background="@drawable/edit_box_layout"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_size_15"
                    android:paddingTop="@dimen/dp_size_15"
                    android:paddingBottom="@dimen/dp_size_15"
                    app:layout_constraintTop_toBottomOf="@+id/login_id_layout">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/login_pw_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/leferi_font_family"
                        android:hint="@string/login_pw_hint"
                        android:inputType="textPassword"
                        android:text="@={viewmodel.userPw}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/basic_hint_text_color2"
                        android:textSize="@dimen/text_size_13" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/login_save_id_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_size_3"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_pw_layout">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/auto_login_chekbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={viewmodel.saveIdFlag}"
                        android:padding="@dimen/dp_size_0" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_save_id"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_14" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/artery_hand_right_chekbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={viewmodel.rightHandFlag}"
                        android:padding="@dimen/dp_size_0" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/right_hand_login"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_14" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/login_btn_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_size_10"
                    android:background="@drawable/btn_box_layout"
                    android:onClick="@{()->viewmodel.doIdLogin()}"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_size_10"
                    android:paddingTop="@dimen/dp_size_15"
                    android:paddingBottom="@dimen/dp_size_15"
                    app:layout_constraintTop_toBottomOf="@+id/login_save_id_layout">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/login_btn_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@string/login_btn"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/login_artery_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_size_10"
                    android:background="@drawable/orange_btn_box_layout"
                    android:onClick="@{()->viewmodel.doArteryLogin()}"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_size_10"
                    android:paddingTop="@dimen/dp_size_15"
                    android:paddingBottom="@dimen/dp_size_15"
                    app:layout_constraintTop_toBottomOf="@+id/login_btn_layout">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/login_artery_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@string/login_artery"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/login_sign_in_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_size_10"
                    android:background="@drawable/etc_btn_box_layout"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_size_10"
                    android:paddingTop="@dimen/dp_size_15"
                    android:paddingBottom="@dimen/dp_size_15"
                    app:layout_constraintTop_toBottomOf="@+id/login_artery_layout">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/login_sign_in_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@string/login_sign_in"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
